@@ -1,6 +1,7 @@
 2024-09-26 Konstantin Kushnir <chpock@gmail.com>
 	* Fix a bug where temporary files were not deleted when installing
 	* Add command --version
+	* Add command --uninstall
 
 2024-09-22 Konstantin Kushnir <chpock@gmail.com>
 	* Bumped version to 2.2.0
